# delta-shift

./: .flake8  .pre-commit-config.yaml  .pylintrc  README.md  flake.nix  nix.flake  pyproject.toml
src/delta-shift/: main.py
